@@ -21,7 +21,11 @@ import cn.edu.tsinghua.iginx.thrift.AggregateType;
 import cn.edu.tsinghua.iginx.thrift.DataType;
 import cn.edu.tsinghua.iginx.thrift.StorageEngineType;
 import cn.edu.tsinghua.iginx.thrift.TagFilterType;
+import cn.edu.tsinghua.iginx.utils.ShellRunner;
+import java.io.File;
 import java.io.IOException;
+import java.io.OutputStream;
+import java.io.PrintWriter;
 import java.util.*;
 import java.util.stream.Collectors;
 import org.apache.commons.lang3.RandomStringUtils;
@@ -392,14 +396,30 @@ public class NewSessionIT {
 
   @Test
   public void testCancelClient() {
-    String clientPath = "../client/target/iginx-client-0.6.0-SNAPSHOT/sbin/start_cli.sh";
+    // use .sh on unix & .bat on windows(absolute path)
+    String clientUnixPath = "../client/target/iginx-client-0.6.0-SNAPSHOT/sbin/start_cli.sh";
+    String clientWinPath = null;
+    try {
+      clientWinPath =
+          new File("../client/target/iginx-client-0.6.0-SNAPSHOT/sbin/start_cli.bat")
+              .getCanonicalPath();
+    } catch (IOException e) {
+      logger.info(
+          "Can't find script ../client/target/iginx-client-0.6.0-SNAPSHOT/sbin/start_cli.bat");
+      fail();
+    }
     try {
       List<Long> sessionIDs1 = conn.executeSql("show sessionid;").getSessionIDs();
       logger.info("before start a client, session_id_list size: " + sessionIDs1.size());
 
       // start a client
-      Runtime.getRuntime().exec(new String[] {"chmod", "+x", clientPath});
-      ProcessBuilder pb = new ProcessBuilder("bash", "-c", clientPath);
+      ProcessBuilder pb = new ProcessBuilder();
+      if (ShellRunner.isOnWin()) {
+        pb.command(clientWinPath);
+      } else {
+        Runtime.getRuntime().exec(new String[] {"chmod", "+x", clientUnixPath});
+        pb.command("bash", "-c", clientUnixPath);
+      }
       Process p = pb.start();
 
       Thread.sleep(3000);
@@ -413,6 +433,13 @@ public class NewSessionIT {
       logger.info("after start a client, session_id_list size: " + sessionIDs2.size());
 
       // kill the client
+      try (OutputStream os = p.getOutputStream();
+          PrintWriter writer = new PrintWriter(os, true)) {
+        // send exit command to client to close session.
+        // destroy() won't work on windows.
+        writer.println("exit;");
+        writer.flush();
+      }
       p.destroy();
       Thread.sleep(3000);
 
@@ -706,6 +733,7 @@ public class NewSessionIT {
   @Test
   public void testQueryAfterDelete() {
     if (!isAbleToDelete) return;
+
     // single path delete data
     try {
       // first
